@@ -1130,7 +1130,7 @@ public class IOUtil {
             return b.booleanValue();
         }
         boolean result = isHtmlFileInner(filenameOrUrl);
-        isHtmlCache.put(filenameOrUrl, new Boolean(result));
+        isHtmlCache.put(filenameOrUrl, Boolean.valueOf(result));
         return result;
     }
 
